[tool.poetry]
name = "cloudfront-continuous-deployment-stepfunctions"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cloudfront_continuous_deployment_stepfunctions"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.28.49"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
