[tool.poetry]
name = "cloudfront-continuous-deployment-stepfunctions"
version = "0.1.0"
description = ""
authors = ["4hei4ehi <4hei4hei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
cfn-lint = "^0.83.3"
flake8 = "^6.1.0"
invoke = "^2.2.0"
pytest = "^7.4.3"


[tool.poetry.group.test_distribution.dependencies]
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
